# FlightsData

./: .gitignore  Deploy.md  README.md  ServerRun.md  TODO  ansible.cfg  cnproject-381016-a92327017fa2.json  deploy.sh  flights-api.yaml  flightsApiDoc.yaml  ingress-nginx.yml  ingress-resource.yml  install-dependencies.sh  port-forward.sh  proj-information.md  proj-information_tmp.html  prometheus-cm.yaml  requirements.txt  setup.py
.config/: ansible-playbook.md  depencies-playbook.yaml  dev-conda-env.yml  install-mambaforge.md
.config/envs/: ansible-requirements.yml  dev-conda-env.yml  prod-conda-env.yml  test-conda-env.yml
.config/ingress/: ingress-nginx.yml  ingress-resource.yml
.config/logging/: prometheus.yaml
.config/playbooks/: ansible-playbook.md  depencies-playbook.yaml  test-playbook.yaml
.config/scripts/: run-ansible.sh  test-cargo.sh
.config/tests/: admin.yaml  docker_runs.sh  example.yaml
.github/workflows/: ci.yml  ci_admin.yml  ci_airlines.yml  ci_flights.yml  ci_ranking.yml
assets/: cloud-architecture-diagram.drawio  functional-diagram.drawio
deploy/: admin-dep.yaml  airline-dep.yaml  flight-dep.yaml  ranking-dep.yaml
k8s/config-maps/: config-map.yaml
k8s/deployments/: admin-dep.yaml  airline-dep.yaml  flight-dep.yaml  predict-dep.yaml  ranking-dep.yaml
k8s/hpa/: hpa.yml  nginx-hpa.yml
k8s/ingress/: ingress-nginx.yml  (+2 more)
src/prediction/aws-test/: Cargo.toml
src/prediction/aws-test/src/: main.rs
src/prediction/prediction-ms/: Cargo.toml  ms-dev.md
src/prediction/prediction-ms/src/: main.rs
swagger_server/: __main__.py
(+48 files in other folders)
