[package]
name = "prediction-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
clap = { version = "4.2.4", features = ["derive"] }
actix-web = "4.3.1"
serde_json = "1.0.96"
aws-config = "0.55.1"
aws-sdk-lambda = "0.26.0"
